#### Don't forget to change the version number in configure.ac! ####

26 Jul 2004 Hercules suspend/resume command support - Greg Smith
26 Jul 2004 Clear PSW Bit 12 when switching to ESAME via SIGP - Ivan Warren
26 Jul 2004 Added ASN_AND_LX_REUSE config statement - Ivan Warren
25 Jul 2004 cfba fixes (I hope) - Greg Smith
22 Jul 2004 Fix 370 address lookup for USE_REAL_ADDR - Greg Smith
22 Jul 2004 Activate ASN-and-LX-reuse facility - Roger Bowler
22 Jul 2004 ASN-and-LX-reuse facility: changes for LASP - Roger Bowler
22 Jul 2004 defsym fix and env var fallback - Ivan Warren
21 Jul 2004 Invalidate AIA for s370 on dat-mode change - Greg Smith
21 Jul 2004 ASN-and-LX-reuse facility: changes for BSG - Roger Bowler
20 Jul 2004 Updated CTC Device def stmt doc for TCP/IP - Ivan Warren
15 Jul 2004 Fixed tape "at loadpoint" sense issue - Ivan Warren
08 Jul 2004 cfba fixes - Greg Smith
08 Jul 2004 ASN-and-LX-reuse facility: SSAR, SSAIR - Roger Bowler
07 Jul 2004 ASN-and-LX-reuse facility: PT, PTI - Roger Bowler
01 Jul 2004 Fix error introduced into BCTR - Juergen & Greg
01 Jul 2004 Minor performance update macro ILC - Bernard van der Helm
29 Jun 2004 exilc.pat - Remove execflag check from INST_UPDATE_PSW - Greg
29 Jun 2004 noilc.pat - Calculate ILC on demand - Greg Smith
27 Jun 2004 pr.pat - Performance tweak for PR - Greg Smith
27 Jun 2004 cckdwrs.pat - Prevent extra writer threads from starting - Greg
26 Jun 2004 if.pat - Minor tweaks to instfetch - Greg Smith
26 Jun 2004 gen.pat - Performance tweaks to L,LM,SLA,SLR,ST,STM - Greg Smith
26 Jun 2004 tlbx2.pat - Fix real mode bug in tlbx.pat - Greg Smith
26 Jun 2004 iawrap2.pat - Fix performance bug in iawrap.pat - Greg Smith
24 Jun 2004 cckdhang.pat - Fix hang on shutdown if using cckd - Greg Smith
19 Jun 2004 lfs.pat - Allow large files if sizeof(off_t) > 4 - Fish & Greg
17 Jun 2004 iawrap.pat - Performance improvement for instruction address
            wrapping - Greg Smith